--- a/index.html
+++ b/index.html
@@ -125,50 +125,52 @@
     </section >
 
     <section id="aboutUs" class="aboutUs">
-        <header class="aboutUs__heading">O nas</header>
+        <header class="aboutUs__heading"><h2>O nas</h2></header>
         <div class="aboutUs__bio">
-            <div class="aboutUs__bio1">
-                <img src="/src/pz.jpg" alt="photo Paulina">
-                <!--<a href="https://github.com/paula-dm" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
-                <a href="https://www.linkedin.com/in/paulina-ziomkowska-182330aa/" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
-                <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>-->
+            <div class="aboutUs_img aboutUs__img1">
+                <div class="aboutUs_card">
+                  <div class="aboutUs_card--front">
+                    <img src="/src/pz.jpg" alt="photo Paulina">
+                  </div>
+                  <div class="aboutUs_card--back">
+                    <a href="https://github.com/paula-dm" target="_blank"><i class="fab fa-github-square fa-3x"></i></a>
+                    <a href="https://www.linkedin.com/in/paulina-ziomkowska-182330aa/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+                    <a href="#"><i class="fas fa-address-card fa-3x"></i></a>
+                  </div>
+                </div>
             </div>
             <div class="aboutUs__caption aboutUs__caption1">
-                <h2>Paulina Ziomkowska</h2>
-                <ul>
-                    <li>Lorem ipsum</li>
-                    <li>Lorem ipsum</li>
-                    <li>Lorem ipsum</li>
-                </ul>
+                <p>Paulina Ziomkowska</p>
             </div>
-            <div class="aboutUs__bio2">
-                <img src="/src/pk.jpeg" alt="photo Piotr">
-                
-                <!--<a href="https://github.com/PTR-KLK" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
-                <a href="http://www.linkedin.com/in/piotr-kielak" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
-                <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>-->
+            <div class="aboutUs_img aboutUs__img2">
+                <div class="aboutUs_card">
+                  <div class="aboutUs_card--front">
+                    <img src="/src/pk.jpeg" alt="photo Piotr">
+                  </div>
+                  <div class="aboutUs_card--back">
+                    <a href="https://github.com/PTR-KLK" target="_blank"><i class="fab fa-github-square fa-3x"></i></a>
+                    <a href="http://www.linkedin.com/in/piotr-kielak" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+                    <a href="#"><i class="fas fa-address-card fa-3x"></i></a>
+                  </div>
+                </div>
             </div>
             <div class="aboutUs__caption aboutUs__caption2">
-                <h2>Piotr Kielak</h2>
-                <ul>
-                    <li>Inżynier</li>
-                    <li>Majsterkowicz</li>
-                    <li>Marzyciel</li>
-                </ul>
+                <p>Piotr Kielak</p>
             </div>
-            <div class="aboutUs__bio3">
-                <img src="/src/pp.jpg" alt="photo Paweł">
-                <!--<a href="https://github.com/pawel-politowski" target="_blank"><i class="fab fa-github-square fa-3x" style="color:#607D8B"></i></a>
-                <a href="https://www.linkedin.com/in/paweł-politowski" target="_blank"><i class="fab fa-linkedin fa-3x" style="color: #607D8B"></i></a>
-                <a href="#"><i class="fas fa-address-card fa-3x" style="color: #607D8B"></i></a>-->
+            <div class="aboutUs_img aboutUs__img3">
+                <div class="aboutUs_card">
+                  <div class="aboutUs_card--front">
+                    <img src="/src/pp.jpg" alt="photo Paweł">
+                  </div>
+                  <div class="aboutUs_card--back">
+                    <a href="https://github.com/pawel-politowski" target="_blank"><i class="fab fa-github-square fa-3x"></i></a>
+                    <a href="https://www.linkedin.com/in/paweł-politowski" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+                    <a href="#"><i class="fas fa-address-card fa-3x"></i></a>
+                  </div>
+                </div>
             </div>
             <div class="aboutUs__caption aboutUs__caption3">
-                <h2>Paweł Politowski</h2>
-                <ul>
-                    <li>Lorem ipsum</li>
-                    <li>Lorem ipsum</li>
-                    <li>Lorem ipsum</li>
-                </ul>
+                <p>Paweł Politowski</p>
             </div>
         </div>
     </section>
