added event listener script

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="footer">&copy; All rights reserved</div>
     </footer>
 
-
+    <script src="scripts/main.js"></script>
 </body>
 
 </html>
