Added flipcard animation on start

--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
     <section id="aboutUs" class="aboutUs">
         <header class="aboutUs__heading"><h2>O nas</h2></header>
         <div class="aboutUs__bio">
-            <div class="aboutUs_img aboutUs__img1">
-                <div class="aboutUs_card">
-                  <div class="aboutUs_card--front">
+            <div class="aboutUs__img aboutUs__img1">
+                <div class="aboutUs__card">
+                  <div class="aboutUs__card--front">
                     <img src="/src/pz.jpg" alt="photo Paulina">
                   </div>
-                  <div class="aboutUs_card--back">
+                  <div class="aboutUs__card--back">
                     <a href="https://github.com/paula-dm" target="_blank"><i class="fab fa-github-square fa-3x"></i></a>
                     <a href="https://www.linkedin.com/in/paulina-ziomkowska-182330aa/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
                     <a href="#"><i class="fas fa-address-card fa-3x"></i></a>
@@ -142,12 +142,12 @@
             <div class="aboutUs__caption aboutUs__caption1">
                 <p>Paulina Ziomkowska</p>
             </div>
-            <div class="aboutUs_img aboutUs__img2">
-                <div class="aboutUs_card">
-                  <div class="aboutUs_card--front">
+            <div class="aboutUs__img aboutUs__img2">
+                <div class="aboutUs__card">
+                  <div class="aboutUs__card--front">
                     <img src="/src/pk.jpeg" alt="photo Piotr">
                   </div>
-                  <div class="aboutUs_card--back">
+                  <div class="aboutUs__card--back">
                     <a href="https://github.com/PTR-KLK" target="_blank"><i class="fab fa-github-square fa-3x"></i></a>
                     <a href="http://www.linkedin.com/in/piotr-kielak" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
                     <a href="#"><i class="fas fa-address-card fa-3x"></i></a>
@@ -157,12 +157,12 @@
             <div class="aboutUs__caption aboutUs__caption2">
                 <p>Piotr Kielak</p>
             </div>
-            <div class="aboutUs_img aboutUs__img3">
-                <div class="aboutUs_card">
-                  <div class="aboutUs_card--front">
+            <div class="aboutUs__img aboutUs__img3">
+                <div class="aboutUs__card">
+                  <div class="aboutUs__card--front">
                     <img src="/src/pp.jpg" alt="photo Paweł">
                   </div>
-                  <div class="aboutUs_card--back">
+                  <div class="aboutUs__card--back">
                     <a href="https://github.com/pawel-politowski" target="_blank"><i class="fab fa-github-square fa-3x"></i></a>
                     <a href="https://www.linkedin.com/in/paweł-politowski" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
                     <a href="#"><i class="fas fa-address-card fa-3x"></i></a>
