fix styles naming

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li class="menu"><a href="#" class="nav">Mój Profil</a></li>
             <li class="menu"><a href="#about__us" class="nav">O Nas</a></li>
             <li class="menu"><a href="#" class="nav">Zaplanuj Przechadzkę</a></li>
-            <li class="menu"><a href="#contact-section" class="nav">Skontaktuj Się Z Nami</a></li>
+            <li class="menu"><a href="#contact" class="nav">Skontaktuj Się Z Nami</a></li>
         </ul>
     </nav>
    
@@ -47,7 +47,7 @@
             </div>
 
             <div class="bottom__header2">
-                    <h1><a href="index.html#contact-section">Dowiedz się jak chodzić z crossRoads!</a></h1>
+                    <h1><a href="index.html#contact">Dowiedz się jak chodzić z crossRoads!</a></h1>
                 </div>
 
             </div> <!---->
@@ -109,15 +109,15 @@
             </div>
     </section>
 
-    <section id="contact-section">
+    <section id="contact" class="contact">
         <!-- RE - Zapis na premierę -->
         <h2>Chcesz zostać powiadomiony, gdy aplikacja już wyjdzie?</h2>
-        <div class="contact-section_container">
+        <div class="contact__container">
             <form action="" method="get">
-                <input class="contact-section_email" type="email" name="email" placeholder="twoj@email.com" required>
-                <input class="contact-section_button" type="button" value="Wyślij">
+                <input class="contact__email" type="email" name="email" placeholder="twoj@email.com" required>
+                <input class="contact__button" type="button" value="Wyślij">
             </form>
-            <div class="contact-section_text">
+            <div class="contact__text">
                 <p>Nienawidzimy spamu i wyślemy ci tylko maila z powiadomieniem, że aplikacja jest dostępna.</p>
                 <p>Zapewniamy bezpieczeństwo danych.</p>
             </div>
