style change in aboutUs section to match contact section

--- a/index.html
+++ b/index.html
@@ -110,23 +110,31 @@
     </section>
 
     <section id="contact" class="contact">
-        <!-- RE - Zapis na premierę -->
-        <h2>Chcesz zostać powiadomiony, gdy aplikacja już wyjdzie?</h2>
         <div class="contact__container">
+            <header class="contact__heading">
+                <h2>Kiedy premiera?</h2>
+                <p>Dostaniesz maila z powiadomieniem na premierę:</p>
+            </header>
             <form action="" method="get">
                 <input class="contact__email" type="email" name="email" placeholder="twoj@email.com" required>
                 <input class="contact__button" type="button" value="Wyślij">
             </form>
-            <div class="contact__text">
+            <div>
                 <p>Nienawidzimy spamu i wyślemy ci tylko maila z powiadomieniem, że aplikacja jest dostępna.</p>
-                <p>Zapewniamy bezpieczeństwo danych.</p>
+                <p class="contact--emphasis">Zapewniamy bezpieczeństwo danych.</p>
             </div>
         </div>
-    </section >
+    </section>
 
     <section id="aboutUs" class="aboutUs">
-        <header class="aboutUs__heading"><h2>O nas</h2></header>
+        <header class="aboutUs__heading">
+            <h2>Nasz zespół</h2>
+            <p>Zaprawieni w bojach podróżnicy:</p>
+        </header>
         <div class="aboutUs__bio">
+            <div class="aboutUs__caption aboutUs__caption1">
+                <p>Paulina Ziomkowska</p>
+            </div>
             <div class="aboutUs__img aboutUs__img1">
                 <div class="aboutUs__card">
                   <div class="aboutUs__card--front">
@@ -139,8 +147,8 @@
                   </div>
                 </div>
             </div>
-            <div class="aboutUs__caption aboutUs__caption1">
-                <p>Paulina Ziomkowska</p>
+            <div class="aboutUs__caption aboutUs__caption2">
+                <p>Piotr Kielak</p>
             </div>
             <div class="aboutUs__img aboutUs__img2">
                 <div class="aboutUs__card">
@@ -154,8 +162,8 @@
                   </div>
                 </div>
             </div>
-            <div class="aboutUs__caption aboutUs__caption2">
-                <p>Piotr Kielak</p>
+            <div class="aboutUs__caption aboutUs__caption3">
+                <p>Paweł Politowski</p>
             </div>
             <div class="aboutUs__img aboutUs__img3">
                 <div class="aboutUs__card">
@@ -168,9 +176,6 @@
                     <a href="#"><i class="fas fa-address-card fa-3x"></i></a>
                   </div>
                 </div>
-            </div>
-            <div class="aboutUs__caption aboutUs__caption3">
-                <p>Paweł Politowski</p>
             </div>
         </div>
     </section> 
