--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/game.css">
 </head>
 <body>
-    <canvas id='gameScreen' width ="800" height="800"></canvas>
+    <canvas id='gameScreen' width ="800px" height="800px"></canvas>
     <script src="game.js"></script>
 </body>
 </html>
