--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>crossRoads</title>
     <script src="https://kit.fontawesome.com/cd3df7232a.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
     <nav class="navigation">
-        <img src="/src/logo.png" class="logo" alt="logo" width="40px">
+        <div class="logo">
+            <img src="/src/logoBW.png" alt="logo"">
+            <div>crossRoads</div>
+        </div>
         <ul class="position">
             <li class="menu"><a href="#" class="nav">Home</a></li>
             <li class="menu"><a href="#" class="nav">Mój Profil</a></li>
