--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
+<body>   
     <nav class="navigation">
         <img src="/src/logo.png" class="logo" alt="logo" width="40px">
         <ul class="position">
-            <li class="menu"><a  href="#" class="nav">Home</a></li>
-            <li class="menu"><a href="#" class="nav">Mój Profil</a></li>
-            <li class="menu"><a href="#about__us" class="nav">O Nas</a></li>
-            <li class="menu"><a href="#" class="nav">Zaplanuj Przechadzkę</a></li>
-            <li class="menu"><a href="#contact" class="nav">Skontaktuj Się Z Nami</a></li>
+            <li class="menu"><a href="#home" class="active nav">Home</a></li>
+            <li class="menu"><a href="#functionalities" class="nav">Dlaczego My?</a></li>
+            <li class="menu"><a href="#section-extra" class="nav">Co Oferujemy?</a></li>
+            <li class="menu"><a href="#contact" class="nav">Premiera</a></li>
+            <li class="menu"><a href="#aboutUs" class="nav">O Nas</a></li>
         </ul>
     </nav>
    
-    <section>
+    <section id="home" class="scrollspy">
         <div id="hero">
 
             <!-- <img src="las.jpg" alt="Przejdź się" class="hero__image"> -->
@@ -56,7 +56,7 @@
 
     </section>
     <!-- RE - Spis planowanych funkcji produktu -->
-    <section id="functionalities">
+    <section id="functionalities" class="scrollspy">
         <ul class="section__functionalities">
             <li class="ul__functionalities">
                 <i class="fas fa-map-signs fa-3x"></i>
@@ -77,7 +77,7 @@
         </ul>
     </section>
 
-    <section class="section-extra">
+    <section id="section-extra" class="section-extra scrollspy">
         <!-- RE - Dodatkowe informacje o produkcie  -->
             <div class="section-extra_funcionality section-extra_funcionality-1">
                 <i class="fas fa-plus fa-3x"></i>
@@ -109,7 +109,7 @@
             </div>
     </section>
 
-    <section id="contact" class="contact">
+    <section id="contact" class="contact scrollspy">
         <div class="contact__container">
             <header class="contact__heading">
                 <h2>Kiedy premiera?</h2>
@@ -126,7 +126,7 @@
         </div>
     </section>
 
-    <section id="aboutUs" class="aboutUs">
+    <section id="aboutUs" class="aboutUs scrollspy">
         <header class="aboutUs__heading">
             <h2>Nasz zespół</h2>
             <p>Zaprawieni w bojach podróżnicy:</p>
@@ -185,6 +185,8 @@
             <p><h5>UWAGA!</h5><p> Niniejsza strona wykorzystuje pliki cookies. Informacje uzyskane za pomocą cookies wykorzystywane są głównie w celach statystycznych. Pozostając na stronie godzisz się na ich zapisywanie w Twojej przeglądarce.</p>
         </div>
     </div> 
+    
+   
 
     <footer>
         <i class="far fa-envelope fa-1x" style="color: #FFFFFF"> crossroads@gmail.com</i>
