--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     </footer>
 
     <script src="rotacja.js"></script>
-    <script src="/css/calculator.js"></script>
+    <script src="calculator.js"></script>
     <script src="script.js"></script>
 
 </body>
