--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <input type="range" min="0" max="4" value="2" class="slider" id="myRange">
       <p class="paragraf">Liczba osób, która chce współdzielić abonament: <span id="people"></span></p>
     
-        <label class="discount"><input class="discount" type="checkbox" id="discount50">JESTEM EMERYTĄ/RENCISTĄ</label><br>
+        <label class="discount"><input class="discount" type="checkbox" id="discount50">JESTEM EMERYTEM/RENCISTĄ</label><br>
         <label class="discount"><input class="discount" type="checkbox" id="discount5">POSIADAM KARTĘ MIESZKAŃCA</label>
     
     </div>
