--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     
         <label class="discount"><input class="discount" type="checkbox" id="discount50">JESTEM EMERYTEM/RENCISTĄ</label><br>
         <label class="discount"><input class="discount" type="checkbox" id="discount5">POSIADAM KARTĘ MIESZKAŃCA</label>
-    
+        <h2 class="pricee">Liczba osób, która chce współdzielić abonament: <span id="price"></span></p>
     </div>
     </section>
     <section id="contact" class="contact">
