--- a/game.html
+++ b/game.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <canvas id='gameScreen' width ="800px" height="800px"></canvas>
+    <img id="imgTree" src="src/tree.png">
     <script src="game.js"></script>
 </body>
 </html>
