--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@
         <input type="range" min="0" max="4" value="0" class="slider" id="myRange">
       <p class="paragraf">Liczba osób, która chce współdzielić abonament: <span id="people"></span></p>
     
-        <label class="discount"><input class="checkbox" type="checkbox" id="discount50">Jestem emerytem/rencistą</label><br>
-        <label class="discount"><input class="checkbox" type="checkbox" id="discount5">Posiadam kartę mieszkańca</label>
+        <label class="discount"><input class="checkbox" type="checkbox" id="discount50">Jestem emerytem/rencistą<br><br>
+        <label class="discount"><input class="checkbox" type="checkbox" id="discount5">Posiadam kartę mieszkańca</label><br><br>
+        <label class="discount"><input class="checkbox" type="checkbox" id="both">Posiadam kartę mieszkańca i jestem emerytem/rencistą</label>
         <p class="price">CENA:  <span id="cena">Zaznacz liczbę osób na suwaku.</span></p>
     </div>
     </section>
