--- a/game.html
+++ b/game.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/game.css">
 </head>
 <body>
-    <canvas id='gameScreen' width ="800px" height="800px" style="border: 1px solid black"></canvas>
+    <canvas id='gameScreen' width ="800px" height="800px" style="border: 1px solid black; "></canvas>
+    <img id="imgTree" src="src/tree.png">
     <script src="game.js"></script>
 </body>
 </html>
