add moving background, code refinement

--- a/game.html
+++ b/game.html
@@ -9,6 +9,7 @@
 <body>
     <canvas id='gameScreen' width ="800px" height="800px" style="border: 1px solid black; "></canvas>
     <img id="imgTree" src="src/tree.png">
+    <img id="imgGround" src="src/ground.png">
     <script src="game.js"></script>
 </body>
 </html>
