add basic game score counter

--- a/game.html
+++ b/game.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <canvas id='gameScreen' width ="800px" height="800px" style="border: 1px solid black; "></canvas>
+    <p id='gameScore'></p>
     <img id="imgTree" src="src/tree.png">
     <img id="imgGround" src="src/ground.png">
     <script src="game.js"></script>
