--- a/game.html
+++ b/game.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <canvas id='gameScreen' width ="800px" height="800px" style="border: 1px solid black; "></canvas>
-    <p id='gameScore'></p>
+    <div id='gameInfo'>
+        <p id='gameScore'></p>
+        <p id='levelInfo'></p>
+    </div>
     <img id="imgTree" src="src/tree.png">
     <img id="imgGround" src="src/ground.png">
     <script src="game.js"></script>
