--- a/game.html
+++ b/game.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
-        <h1>Z crossRoads przez las <img src="src/logoBW.png"></h1> 
-        <p class="head">Im dalej w las, tym więcej drzew!</p>
+        <h1><img src="src/logoBW.png">Z crossRoads przez las </h1> 
+        <p class="head">  Im dalej w las, tym więcej drzew!</p>
         <button id="start">START</button>
     </header>
     <div class="gameWrapper">
