Link to game added

--- a/index.html
+++ b/index.html
@@ -139,6 +139,20 @@
                 <p class="contact--emphasis">Zapewniamy bezpieczeństwo danych.</p>
             </div>
         </div>
+        <div id="id01" class="modal">
+            <span onclick="document.getElementById('id01').style.display='none'" class="close__modal" title="Close Modal">×</span>
+            <form class="modal-content" action="/action_page.php">
+              <div class="container__modal">
+                <h2>Dziękujemy za zapis na premierę!</h2><br/>
+                <p>Masz teraz możliwość zagrać w naszą grę!</p><br/>
+              
+                <div class="clearfix">
+                  <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Powrót na stronę</button>
+                  <button type="button" onclick="window.location.href='game.html'" class="acceptbtn">Przejście do gry</button>
+                </div>
+              </div>
+            </form>
+          </div>
     </section>
 
     <section id="aboutUs" class="aboutUs scrollspy">
