--- a/game.html
+++ b/game.html
@@ -14,20 +14,24 @@
     </div>
     <img id="imgTree" src="src/tree.png">
     <img id="imgGround" src="src/ground.png">
+
     <div id="myModal" class="modal">
-      <div class="modal-content">
-      <div class="modal-header">
-            <h2>Ekipa crossRoads wita Ciebie w naszej mini grze!</h2>
-      </div>
-      <div class="modal-body">
-        <p><h3>Wybierz się z nami na spacer! Uważaj na drzewa i staraj się zachowywać od nich bezpieczną odległość.</h3></p>
-        <p><h3>Do sterowania używaj strzałek na klawiaturze.</h3></p>
-        <button class="close"><h3>Zacznij zabawę!</h3></button>
-      </div>
-      <div class="modal-footer">    
+      <div class="modal__content">
+        <div class="modal__header">
+          <h2>Ekipa crossRoads wita Ciebie w naszej mini grze!</h2>
+        </div>
+        <div class="modal__body">
+          <p>Wybierz się z nami na spacer! Uważaj na drzewa i staraj się zachowywać od nich bezpieczną odległość.</p>
+          <p>Do sterowania używaj strzałek na klawiaturze.</p>
+          <button class="close">Zacznij zabawę!</button>
+        </div>
       </div>
     </div>
-  </div>
+
+    <div id="endGame" class="modal">
+      <div id="endGameHeader" class="modal__header"></div>
+      <div id="endGameBody"></div>
+    </div>
   
     <script src="game.js"></script>
 </body>
