add highScore info

--- a/game.html
+++ b/game.html
@@ -11,6 +11,7 @@
     <div id='gameInfo'>
         <p id='gameScore'></p>
         <p id='levelInfo'></p>
+        <p id='highScore'></p>
     </div>
     <img id="imgTree" src="src/tree.png">
     <img id="imgGround" src="src/ground.png">
