--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
    
         <label class="discount"><input name="checkbox" type="checkbox" id="discount50">Jestem emerytem/rencistą<br></label>
         <label class="discount"><input name="checkbox" type="checkbox" id="discount5">Posiadam kartę mieszkańca<br></label>
-        <!-- <label class="discount"></label><input name="checkbox" type="checkbox" id="both">Posiadam kartę mieszkańca i jestem emerytem/rencistą -->
+        
        </form>
         <p class="price">CENA:  <span id="cena">Zaznacz liczbę osób na suwaku.</span></p>
     </div>
@@ -204,7 +204,7 @@
     </footer>
 
     <script src="rotacja.js"></script>
-    <script src="calc.js"></script>
+    <script src="calculator.js"></script>
     <script src="script.js"></script>
 
 </body>
