add animated player

--- a/game.html
+++ b/game.html
@@ -26,6 +26,7 @@
 
     <img id="imgTree" src="src/tree.png">
     <img id="imgGround" src="src/ground.png">
+    <img id="imgPlayer" src="src/player.png">
 
     <div id="myModal" class="modal">
       <div class="modal__content">
